# flooid-rust

./: Cargo.toml
crates/physics/: Cargo.toml
crates/physics/src/: components.rs  events.rs  lib.rs  resources.rs
crates/physics/src/plugins/: boundary.rs  debug.rs  gravity.rs  grid.rs  mod.rs  particle.rs
src/: main.rs
