[package]
name = "flooid"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "crates/*" ]

[dependencies]
bevy = "0.16.1"
rand = "0.9.1"

physics = { path= "crates/physics" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
